add home section

--- a/accesorios.html
+++ b/accesorios.html
@@ -21,6 +21,7 @@
                     <li><a href="polerones.html">Polerones</a></li>
                     <li><a href="frajacket.html">Frajacket</a></li>
                     <li><a href="accesorios.html">Accesorios</a></li>
+                    <li><a href="hogar.html">Hogar</a></li>
                     <li><a href="index.html#a-tu-pinta">A tu pinta</a></li>
                 </ul>
             </nav>
@@ -69,6 +70,7 @@
                     <a href="polerones.html">Polerones</a>
                     <a href="frajacket.html">Frajacket</a>
                     <a href="accesorios.html">Accesorios</a>
+                    <a href="hogar.html">Hogar</a>
                 </div>
                 <div class="footer-section">
                     <h3>Síguenos</h3>
