--- a/hogar.html
+++ b/hogar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frajacket - PUA Diseño Textil Infantil</title>
+    <title>Hogar - PUA Diseño Textil Infantil</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -30,14 +30,14 @@
 
     <section class="page-header">
         <div class="container">
-            <h1>Frajacket</h1>
-            <p>Chaquetas únicas confeccionadas con materiales reciclados y sostenibles</p>
+            <h1>Hogar</h1>
+            <p>Productos para el hogar elaborados con materiales reciclados y sostenibles</p>
         </div>
     </section>
 
     <section class="products">
         <div class="container">
-            <div class="product-grid" data-product-type="frajackets">
+            <div class="product-grid" data-product-type="hogar">
                 <!-- Los productos se cargarán dinámicamente -->
             </div>
         </div>
@@ -46,12 +46,9 @@
     <section class="product-info">
         <div class="container">
             <div class="info-content">
-                <h2>Sobre nuestros Frajacket</h2>
-                <p>Nuestros Frajacket representan la fusión perfecta entre funcionalidad, calidez y diseño sostenible. Cada pieza es confeccionada artesanalmente utilizando materiales reciclados de alta calidad, dando nueva vida a textiles que de otra forma serían desechados.</p>
-                
-                <p>El proceso de creación de cada Frajacket comienza con la cuidadosa selección de materiales, priorizando texturas y tonalidades que se complementen entre sí. Luego, a través de un meticuloso trabajo de corte y confección, transformamos estos materiales en prendas únicas que combinan estética y practicidad.</p>
-                
-                <p>Cada detalle, desde los bolsillos hasta los cierres, es considerado tanto por su funcionalidad como por su aporte al diseño general. El resultado son chaquetas con personalidad propia, que no solo mantienen el calor sino que también cuentan una historia de sostenibilidad y creatividad.</p>
+                <h2>Sobre nuestros productos de hogar</h2>
+                <p>En PUA creemos que cada detalle en el hogar importa. Por eso, creamos productos que combinan funcionalidad y sostenibilidad, utilizando materiales reciclados para brindarte artículos únicos y responsables con el medio ambiente.</p>
+                <p>Pronto podrás descubrir nuestra colección de productos para el hogar, pensada para aportar personalidad y calidez a tu espacio mientras cuidas el planeta.</p>
             </div>
         </div>
     </section>
