--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
                 <div class="philosophy-image">
                     <img src="images/logo_bordado.jpg" alt="Logo PUA bordado" class="bordered-image">
+                    <img src="images/lt.png" alt="Logo Laboratorio Textil" class="bordered-image">
                 </div>
             </div>
         </div>
