--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="contact-info" style="background-color: rgba(255, 255, 255, 0.15); padding: 30px; border-radius: 10px; backdrop-filter: blur(5px);">
                 <h3 style="color: #f8f9fa; font-size: 1.8rem; margin-bottom: 20px; text-align: center;">Contáctanos para personalizar</h3>
                 <div style="display: flex; flex-direction: column; gap: 15px; align-items: center;">
-                    <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fas fa-envelope" style="margin-right: 10px; color: #f8f9fa;"></i> info@puadisenos.cl</p>
+                    <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fas fa-envelope" style="margin-right: 10px; color: #f8f9fa;"></i> pua@laboratoriotextil.com</p>
                     <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fas fa-phone" style="margin-right: 10px; color: #f8f9fa;"></i> +56 9 6373 2829</p>
                     <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fab fa-instagram" style="margin-right: 10px; color: #f8f9fa;"></i> @pua_disenos</p>
                 </div>
