--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fas fa-envelope" style="margin-right: 10px; color: #f8f9fa;"></i> pua@laboratoriotextil.com</p>
                     <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fas fa-phone" style="margin-right: 10px; color: #f8f9fa;"></i> +56 9 6373 2829</p>
                     <p style="color: #f8f9fa; font-size: 1.2rem;"><i class="fab fa-instagram" style="margin-right: 10px; color: #f8f9fa;"></i> @pua_disenos</p>
+                    <p style="color: #f8f9fa; font-size: 1.2rem; text-align: center; margin-top: 10px;">
+                        Para peticiones al por mayor, envíanos un correo a <a href="mailto:pua@laboratoriotextil.com" style="color: #f8f9fa; text-decoration: underline;">pua@laboratoriotextil.com</a> y te enviaremos un presupuesto.
+                    </p>
                 </div>
             </div>
         </div>
