--- a/frajacket.html
+++ b/frajacket.html
@@ -46,8 +46,8 @@
     <section class="product-info">
         <div class="container">
             <div class="info-content">
-                <h2>Sobre nuestros Frajacket</h2>
-                <p>Nuestros Frajacket representan la fusión perfecta entre funcionalidad, calidez y diseño sostenible. Cada pieza es confeccionada artesanalmente utilizando materiales reciclados de alta calidad, dando nueva vida a textiles que de otra forma serían desechados.</p>
+                <h2>Sobre nuestras Frajacket</h2>
+                <p>Nuestras Frajacket representan la fusión perfecta entre funcionalidad, calidez y diseño sostenible. Cada pieza es confeccionada artesanalmente utilizando materiales reciclados de alta calidad, dando nueva vida a textiles que de otra forma serían desechados.</p>
                 
                 <p>El proceso de creación de cada Frajacket comienza con la cuidadosa selección de materiales, priorizando texturas y tonalidades que se complementen entre sí. Luego, a través de un meticuloso trabajo de corte y confección, transformamos estos materiales en prendas únicas que combinan estética y practicidad.</p>
                 
