--- a/thank-you.html
+++ b/thank-you.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accesorios - PUA Diseño Textil Infantil</title>
+    <title>¡Gracias! - Laboratorio Textil</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -28,35 +28,13 @@
             </nav>
         </div>
     </header>
-
-    <section class="page-header">
+    <section style="padding:80px 0; text-align:center;">
         <div class="container">
-            <h1>Accesorios</h1>
-            <p>Complementos textiles elaborados con retazos y materiales recuperados</p>
+            <h2>¡Gracias por tu pedido!</h2>
+            <p>Hemos recibido tu solicitud y nos pondremos en contacto contigo pronto.</p>
+            <a href="index.html" class="btn">Volver al inicio</a>
         </div>
     </section>
-
-    <section class="products">
-        <div class="container">
-            <div class="product-grid" data-product-type="colets">
-                <!-- Los productos se cargarán dinámicamente -->
-            </div>
-        </div>
-    </section>
-
-    <section class="product-info">
-        <div class="container">
-            <div class="info-content">
-                <h2>Sobre nuestros accesorios</h2>
-                <p>Nuestros accesorios son el resultado de un proceso creativo que busca aprovechar al máximo los retazos textiles. Cada pieza es confeccionada a mano, dando una segunda vida a materiales que de otra forma serían desechados.</p>
-                
-                <p>En PUA creemos que incluso los complementos más pequeños pueden tener un gran impacto, tanto en tu estilo como en el medio ambiente. Por eso, cada accesorio que creamos combina funcionalidad, estética y sostenibilidad.</p>
-                
-                <p>Los diseños coloridos y las texturas variadas hacen que cada accesorio sea único, reflejando nuestra filosofía de valorar el oficio de la costura y generar productos de calidad que respetan el entorno.</p>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -72,6 +50,7 @@
                     <a href="frajacket.html">Frajacket</a>
                     <a href="accesorios.html">Accesorios</a>
                     <a href="hogar.html">Hogar</a>
+                    <a href="haz-tu-pedido.html">Haz tu pedido</a>
                 </div>
                 <div class="footer-section">
                     <h3>Síguenos</h3>
@@ -86,7 +65,5 @@
             </div>
         </div>
     </footer>
-
-    <script src="js/main.js"></script>
 </body>
 </html>
