--- a/colets.html
+++ b/colets.html
@@ -22,6 +22,7 @@
                     <li><a href="frajacket.html">Frajacket</a></li>
                     <li><a href="colets.html">Colets y Accesorios</a></li>
                     <li><a href="index.html#contacto">Contacto</a></li>
+                    <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
                 </ul>
             </nav>
         </div>
