--- a/hogar.html
+++ b/hogar.html
@@ -23,6 +23,7 @@
                     <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="hogar.html">Hogar</a></li>
                     <li><a href="index.html#a-tu-pinta">A tu pinta</a></li>
+                    <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
                 </ul>
             </nav>
         </div>
