--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -31,11 +31,11 @@
     <section style="padding: 80px 0;">
         <div class="container">
             <h2 style="text-align: center; margin-bottom: 40px; font-size: 2rem; color: var(--primary-color);">Haz tu pedido</h2>
-            <form class="order-form" action="https://formspree.io/f/xwpolgdp" method="POST" enctype="multipart/form-data">
+            <form class="order-form" action="https://formspree.io/f/xwpolgdp" method="POST">
                 <input type="hidden" name="_next" value="thank-you.html">
                 <div class="form-group">
-                    <label for="attachment">Adjunta tu boceto o imagen</label>
-                    <input type="file" id="attachment" name="attachment" required>
+                    <label for="email">Tu correo electrónico</label>
+                    <input type="email" id="email" name="_replyto" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Cuéntanos lo que necesitas</label>
