upload menu and more

--- a/frajacket.html
+++ b/frajacket.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frajacket - PUA Diseño Textil Infantil</title>
+    <title>Frajacket - PUA</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -17,12 +17,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="polerones.html">Polerones</a></li>
                     <li><a href="frajacket.html">Frajacket</a></li>
                     <li><a href="accesorios.html">Accesorios</a></li>
                     <li><a href="hogar.html">Hogar</a></li>
-                    <li><a href="index.html#a-tu-pinta">A tu pinta</a></li>
                     <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
                 </ul>
             </nav>
@@ -32,7 +30,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Frajacket</h1>
-            <p>Chaquetas únicas confeccionadas con materiales reciclados y sostenibles</p>
+            <p></p>
         </div>
     </section>
 
@@ -67,7 +65,6 @@
                 </div>
                 <div class="footer-section">
                     <h3>Enlaces</h3>
-                    <a href="index.html">Inicio</a>
                     <a href="polerones.html">Polerones</a>
                     <a href="frajacket.html">Frajacket</a>
                     <a href="accesorios.html">Accesorios</a>
