--- a/hogar.html
+++ b/hogar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hogar - PUA Diseño Textil Infantil</title>
+    <title>Hogar - PUA </title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Hogar</h1>
-            <p>Productos para el hogar elaborados con materiales reciclados y sostenibles</p>
+            <p></p>
         </div>
     </section>
 
