--- a/thank-you.html
+++ b/thank-you.html
@@ -29,7 +29,9 @@
     <section style="padding:80px 0; text-align:center;">
         <div class="container">
             <h2>¡Gracias por tu pedido!</h2>
-            <p>Hemos recibido tu solicitud y nos pondremos en contacto contigo pronto.</p>
+            <p>Gracias por confiar en Laboratorio Textil.</p>
+            <p>Pronto recibirás en tu correo la información detallada de tu pedido junto con un presupuesto personalizado.</p>
+            <p>Si tienes alguna consulta, escríbenos a <a href="mailto:pua@laboratoriotextil.com">pua@laboratoriotextil.com</a>.</p>
             <a href="index.html" class="btn">Volver al inicio</a>
         </div>
     </section>
