--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -35,13 +35,43 @@
             </div>
             <form class="order-form" action="https://formspree.io/f/xwpolgdp" method="POST">
                 <input type="hidden" name="_next" value="thank-you.html">
+                <!-- Datos de contacto -->
+                <div class="form-group">
+                    <label for="name">Tu nombre completo</label>
+                    <input type="text" id="name" name="name" placeholder="Tu nombre completo" required>
+                </div>
                 <div class="form-group">
                     <label for="email">Tu correo electrónico</label>
                     <input type="email" id="email" name="_replyto" placeholder="tucorreo@ejemplo.com" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Cuéntanos tu idea con todo detalle</label>
-                    <textarea id="message" name="message" rows="6" placeholder="Por ejemplo: Quiero un polerón en tonos pastel con bordado de mi nombre y capucha..." required></textarea>
+                    <label for="phone">Teléfono de contacto (opcional)</label>
+                    <input type="tel" id="phone" name="phone" placeholder="+56 9 1234 5678">
+                </div>
+                <!-- Detalles del pedido -->
+                <div class="form-group">
+                    <label for="reference">Producto de referencia (opcional)</label>
+                    <input type="text" id="reference" name="reference" placeholder="Nombre del producto del sitio">
+                </div>
+                <div class="form-group">
+                    <label for="size">Talla o medida (opcional)</label>
+                    <input type="text" id="size" name="size" placeholder="Ej. S, M, 12-18 meses">
+                </div>
+                <div class="form-group">
+                    <label for="quantity">Cantidad (opcional)</label>
+                    <input type="number" id="quantity" name="quantity" min="1" placeholder="1">
+                </div>
+                <div class="form-group">
+                    <label for="colors">Colores preferidos (opcional)</label>
+                    <input type="text" id="colors" name="colors" placeholder="Tonos pastel, verde...">
+                </div>
+                <div class="form-group">
+                    <label for="materials_pref">Materiales preferidos (opcional)</label>
+                    <input type="text" id="materials_pref" name="materials_pref" placeholder="Algodón, franela...">
+                </div>
+                <div class="form-group">
+                    <label for="message">Comentarios o instrucciones adicionales</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Por ejemplo: detalles especiales, plazos de entrega, urgencia..." required></textarea>
                 </div>
                 <div class="form-group" style="text-align: center;">
                     <button type="submit" class="btn">Enviar</button>
