--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -35,44 +35,61 @@
             </div>
             <form class="order-form" action="https://formspree.io/f/xwpolgdp" method="POST">
                 <input type="hidden" name="_next" value="thank-you.html">
-                <!-- Datos de contacto -->
-                <div class="form-group">
-                    <label for="name">Tu nombre completo</label>
-                    <input type="text" id="name" name="name" placeholder="Tu nombre completo" required>
-                </div>
+                <!-- Contacto -->
                 <div class="form-group">
                     <label for="email">Tu correo electrónico</label>
                     <input type="email" id="email" name="_replyto" placeholder="tucorreo@ejemplo.com" required>
                 </div>
+                <!-- Descripción principal -->
                 <div class="form-group">
-                    <label for="phone">Teléfono de contacto (opcional)</label>
-                    <input type="tel" id="phone" name="phone" placeholder="+56 9 1234 5678">
+                    <label for="message">Cuéntanos tu proyecto en detalle</label>
+                    <textarea id="message" name="message" rows="6"
+                        placeholder="Por ejemplo: Quiero un polerón infantil con estampado de flor, colores pasteles y capucha..."
+                        required></textarea>
                 </div>
-                <!-- Detalles del pedido -->
-                <div class="form-group">
-                    <label for="reference">Producto de referencia (opcional)</label>
-                    <input type="text" id="reference" name="reference" placeholder="Nombre del producto del sitio">
-                </div>
-                <div class="form-group">
-                    <label for="size">Talla o medida (opcional)</label>
-                    <input type="text" id="size" name="size" placeholder="Ej. S, M, 12-18 meses">
-                </div>
-                <div class="form-group">
-                    <label for="quantity">Cantidad (opcional)</label>
-                    <input type="number" id="quantity" name="quantity" min="1" placeholder="1">
-                </div>
-                <div class="form-group">
-                    <label for="colors">Colores preferidos (opcional)</label>
-                    <input type="text" id="colors" name="colors" placeholder="Tonos pastel, verde...">
-                </div>
-                <div class="form-group">
-                    <label for="materials_pref">Materiales preferidos (opcional)</label>
-                    <input type="text" id="materials_pref" name="materials_pref" placeholder="Algodón, franela...">
-                </div>
-                <div class="form-group">
-                    <label for="message">Comentarios o instrucciones adicionales</label>
-                    <textarea id="message" name="message" rows="5" placeholder="Por ejemplo: detalles especiales, plazos de entrega, urgencia..." required></textarea>
-                </div>
+                <!-- Personalización (opcional) -->
+                <fieldset class="form-group">
+                    <legend>Personaliza tu pedido</legend>
+                    <div class="form-group">
+                        <label for="reference">Producto de referencia</label>
+                        <input list="reference-list" id="reference" name="reference"
+                            placeholder="Escribe o selecciona un producto">
+                        <datalist id="reference-list">
+                            <option value="Polerón Geométrico Verde">
+                            <option value="Frajacket Deluxe">
+                            <option value="Estuche Hogar">
+                            <option value="Colet Infantil">
+                        </datalist>
+                    </div>
+                    <div class="form-group">
+                        <label for="size">Talla o medida</label>
+                        <select id="size" name="size">
+                            <option value="">-- Selecciona tamaño --</option>
+                            <option value="XS">XS</option>
+                            <option value="S">S</option>
+                            <option value="M">M</option>
+                            <option value="L">L</option>
+                            <option value="XL">XL</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="quantity">Cantidad: <span id="quantity-value">1</span></label>
+                        <input type="range" id="quantity" name="quantity" min="1" max="10" value="1"
+                            oninput="document.getElementById('quantity-value').innerText = this.value">
+                    </div>
+                    <div class="form-group">
+                        <label for="color">Color principal</label>
+                        <input type="color" id="color" name="color" value="#d1d1d1">
+                    </div>
+                    <div class="form-group">
+                        <label>Materiales preferidos</label><br>
+                        <label><input type="checkbox" name="materials[]" value="Algodón reciclado"> Algodón reciclado</label><br>
+                        <label><input type="checkbox" name="materials[]" value="Franela"> Franela</label><br>
+                        <label><input type="checkbox" name="materials[]" value="Felpa"> Felpa</label><br>
+                        <label><input type="checkbox" name="materials[]" value="Otro"> Otro</label>
+                    </div>
+                </fieldset>
+                <!-- Enviar -->
                 <div class="form-group" style="text-align: center;">
                     <button type="submit" class="btn">Enviar</button>
                 </div>
