--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -39,56 +39,16 @@
                 <div class="form-group">
                     <label for="message">Cuéntanos tu proyecto en detalle</label>
                     <textarea id="message" name="message" rows="6"
-                        placeholder="Por ejemplo: Quiero un polerón infantil con estampado de flor, colores pasteles y capucha..."
+                        placeholder="Ejemplo muy detallado: Quiero un polerón infantil acolchado, talla M (6 años), en felpa de algodón orgánico color celeste, con estampado de montañas en la espalda, capucha forrada, puños elásticos y bolsillos laterales."
                         required></textarea>
+                    <p class="form-note">Si tienes telas propias que quieras que utilicemos, envíanos sus imágenes al correo <a href="mailto:pua@laboratoriotextil.com">pua@laboratoriotextil.com</a> y te responderemos a la brevedad.</p>
                 </div>
                 <!-- Contacto -->
                 <div class="form-group">
                     <label for="email">Tu correo electrónico</label>
                     <input type="email" id="email" name="_replyto" placeholder="tucorreo@ejemplo.com" required>
                 </div>
-                <!-- Personalización (opcional) -->
-                <fieldset class="form-group">
-                    <legend>Personaliza tu pedido</legend>
-                    <div class="form-group">
-                        <label for="reference">Producto de referencia</label>
-                        <input list="reference-list" id="reference" name="reference"
-                            placeholder="Escribe o selecciona un producto">
-                        <datalist id="reference-list">
-                            <option value="Polerón Geométrico Verde">
-                            <option value="Frajacket Deluxe">
-                            <option value="Estuche Hogar">
-                            <option value="Colet Infantil">
-                        </datalist>
-                    </div>
-                    <div class="form-group">
-                        <label for="size">Talla o medida</label>
-                        <select id="size" name="size">
-                            <option value="">-- Selecciona tamaño --</option>
-                            <option value="XS">XS</option>
-                            <option value="S">S</option>
-                            <option value="M">M</option>
-                            <option value="L">L</option>
-                            <option value="XL">XL</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="quantity">Cantidad: <span id="quantity-value">1</span></label>
-                        <input type="range" id="quantity" name="quantity" min="1" max="10" value="1"
-                            oninput="document.getElementById('quantity-value').innerText = this.value">
-                    </div>
-                    <div class="form-group">
-                        <label for="color">Color principal</label>
-                        <input type="color" id="color" name="color" value="#d1d1d1">
-                    </div>
-                    <div class="form-group">
-                        <label>Materiales preferidos</label><br>
-                        <label><input type="checkbox" name="materials[]" value="Algodón reciclado"> Algodón reciclado</label><br>
-                        <label><input type="checkbox" name="materials[]" value="Franela"> Franela</label><br>
-                        <label><input type="checkbox" name="materials[]" value="Felpa"> Felpa</label><br>
-                        <label><input type="checkbox" name="materials[]" value="Otro"> Otro</label>
-                    </div>
-                </fieldset>
+                <!-- Fin del formulario -->
                 <!-- Enviar -->
                 <div class="form-group" style="text-align: center;">
                     <button type="submit" class="btn">Enviar</button>
