--- a/haz-tu-pedido.html
+++ b/haz-tu-pedido.html
@@ -39,7 +39,7 @@
                 <div class="form-group">
                     <label for="message">Cuéntanos tu proyecto en detalle</label>
                     <textarea id="message" name="message" rows="6"
-                        placeholder="Ejemplo muy detallado: Quiero un polerón infantil acolchado, talla M (6 años), en felpa de algodón orgánico color celeste, con estampado de montañas en la espalda, capucha forrada, puños elásticos y bolsillos laterales."
+                        placeholder="Ejemplo: Quiero un polerón infantil acolchado, talla M (6 años), en felpa de algodón orgánico color celeste, con estampado de montañas en la espalda, capucha forrada, puños elásticos y bolsillos laterales."
                         required></textarea>
                     <p class="form-note">Si tienes telas propias que quieras que utilicemos, envíanos sus imágenes al correo <a href="mailto:pua@laboratoriotextil.com">pua@laboratoriotextil.com</a> y te responderemos a la brevedad.</p>
                 </div>
@@ -47,6 +47,7 @@
                 <div class="form-group">
                     <label for="email">Tu correo electrónico</label>
                     <input type="email" id="email" name="_replyto" placeholder="tucorreo@ejemplo.com" required>
+                    <p class="form-note">Aquí recibirás información detallada del producto, presupuesto y formas de pago.</p>
                 </div>
                 <!-- Fin del formulario -->
                 <!-- Enviar -->
