--- a/thank-you.html
+++ b/thank-you.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- i18n scripts -->
+    <script src="https://unpkg.com/i18next@21.6.3/dist/umd/i18next.min.js"></script>
+    <script src="js/i18n.js"></script>
 </head>
 <body>
     <header>
@@ -17,22 +20,22 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="polerones.html">Polerones</a></li>
-                    <li><a href="frajacket.html">Frajacket</a></li>
-                    <li><a href="accesorios.html">Accesorios</a></li>
-                    <li><a href="hogar.html">Hogar</a></li>
-                    <li><a href="haz-tu-pedido.html">Haz tu pedido</a></li>
+                    <li><a href="polerones.html" data-i18n="nav.polerones">Polerones</a></li>
+                    <li><a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a></li>
+                    <li><a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a></li>
+                    <li><a href="hogar.html" data-i18n="nav.hogar">Hogar</a></li>
+                    <li><a href="haz-tu-pedido.html" data-i18n="nav.haz_pedido">Haz tu pedido</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section style="padding:80px 0; text-align:center;">
         <div class="container">
-            <h2>¡Gracias por tu pedido!</h2>
-            <p>Gracias por confiar en Laboratorio Textil.</p>
-            <p>Pronto recibirás en tu correo la información detallada de tu pedido junto con un presupuesto personalizado.</p>
-            <p>Si tienes alguna consulta, escríbenos a <a href="mailto:pua@laboratoriotextil.com">pua@laboratoriotextil.com</a>.</p>
-            <a href="index.html" class="btn">Volver al inicio</a>
+            <h2 data-i18n="thank.title"></h2>
+            <p data-i18n="thank.subtitle"></p>
+            <p data-i18n="thank.info1"></p>
+            <p data-i18n-html="thank.info2"></p>
+            <a href="index.html" class="btn" data-i18n="thank.button.home"></a>
         </div>
     </section>
     <footer>
@@ -40,19 +43,19 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>PUA</h3>
-                    <p>Diseño textil infantil sostenible</p>
-                    <p>Valparaíso, Chile</p>
+                    <p data-i18n="footer.tagline">Diseño textil infantil sostenible</p>
+                    <p data-i18n="footer.location">Valparaíso, Chile</p>
                 </div>
                 <div class="footer-section">
-                    <h3>Enlaces</h3>
-                    <a href="polerones.html">Polerones</a>
-                    <a href="frajacket.html">Frajacket</a>
-                    <a href="accesorios.html">Accesorios</a>
-                    <a href="hogar.html">Hogar</a>
-                    <a href="haz-tu-pedido.html">Haz tu pedido</a>
+                    <h3 data-i18n="footer.links">Enlaces</h3>
+                    <a href="polerones.html" data-i18n="nav.polerones">Polerones</a>
+                    <a href="frajacket.html" data-i18n="nav.frajacket">Frajacket</a>
+                    <a href="accesorios.html" data-i18n="nav.accesorios">Accesorios</a>
+                    <a href="hogar.html" data-i18n="nav.hogar">Hogar</a>
+                    <a href="haz-tu-pedido.html" data-i18n="nav.haz_pedido">Haz tu pedido</a>
                 </div>
                 <div class="footer-section">
-                    <h3>Síguenos</h3>
+                    <h3 data-i18n="footer.follow_us">Síguenos</h3>
                     <div class="social-links">
                         <a href="https://www.instagram.com/pua_disenos/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -60,9 +63,10 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 PUA - Todos los derechos reservados</p>
+                <p data-i18n="footer.copyright">© 2025 PUA - Todos los derechos reservados</p>
             </div>
         </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
